--- a/index.html
+++ b/index.html
@@ -10,55 +10,55 @@
   <body>
     <header>
       <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Потрфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <span style="color:var(--blue-color)">Web</span>Studio
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link"">Потрфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-        <ul>
-          <li><a href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a href="tel:+380961111">+38 096 111 11 11</a></li>
+        <ul class="contact-nav list" >
+          <li><a href="mailto:into@devstudio.com"class="link">into@devstudio.com</a></li>
+          <li><a href="tel:+380961111"class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-      <section>
-        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title" style="text-transform:uppercase">ефективні рішення для вашого бізнесу</h1>
+        <button class="button" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Зміст</h2>
-        <ul>          
+      <section class="section">
+        <h2 class="section-title visually-hidden">Зміст</h2>
+        <ul class="details">          
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p  class="about">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="about">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
+            <p class="about">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="about">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-          <ul>
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
+        <ul>
             <li><img src="./images/box1.jpg" alt="action1" width="370"></li>
             <li><img src="./images/box2.jpg" alt="action2" width="370"></li>
             <li><img src="./images/box3.jpg" alt="action3" width="370"></li>            
-          </ul>
+        </ul>
       </section>
       <!--Team-->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
          <ul> 
             <li>
               <img src="./images/team1.jpg" alt="team_1" width="270" >
@@ -84,7 +84,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <span style="color:var(--blue-color)">Web</span>Studio
       <address>
         <ul>
           <li><a href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
