--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
       <nav>
-        <span style="color:var(--blue-color)">Web</span>Studio
+        <span class="logo"style="color:var(--blue-color)">Web</span><span class="logo">Studio</span>
         <ul class="site-nav list">
           <li><a href="" class="link current">Студія</a></li>
           <li><a href="./portfolio.html" class="link"">Потрфоліо</a></li>
@@ -24,7 +27,7 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title" style="text-transform:uppercase">ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero-title">ефективні рішення для вашого бізнесу</h1>
         <button class="button" type="button">Замовити послугу</button>
       </section>
       <section class="section">
@@ -84,12 +87,12 @@
       </section>
     </main>
     <footer>
-      <span style="color:var(--blue-color)">Web</span>Studio
+      <span class="logo"style="color:var(--blue-color)">Web</span><span class="logo">Studio</span>
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a href="tel:+380961111">+38 096 111 11 11</a></li>
+          <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li><a class="adress-link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="adress-link" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
