--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <span class="logo"style="color:var(--blue-color)">Web</span><span class="logo">Studio</span>
+        <span class="logo">Web</span><span class="logo" style="color:var(--main-text-color);">Studio</span>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
           <li><a href="./portfolio.html" class="link current">Потрфоліо</a></li>
@@ -34,22 +34,74 @@
         <li><button class="button-portfolio" type="button">Дизайн</button></li>
         <li><button class="button-portfolio" type="button">Маркетинг</button></li>
        </ul>
-      <ul class="porf-nav list">
+      <ul class=" list">
         <li>
-          <a class="link" href="https://www.edu.goit.global/uk/learn/6180822/845990/845999/homework">
-          <img src="" alt="" >
-          <H2 class="link">bgfdhbf</H2>
-          <p>gfrdhrdh</p>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-techno.jpg" alt="Технокряк" width="370">
+          <H2 class="portfolio-name">Технокряк</H2>
+          <p class="portfolio-list">Веб-сайт</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+          <H2 class="portfolio-name">Постер New Orlean vs Golden Star</H2>
+          <p class="portfolio-list">Дизайн</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-seafood.jpg" alt="Ресторан Seafood" width="370">
+          <H2 class="portfolio-name">Ресторан Seafood</H2>
+          <p class="portfolio-list">Додаток</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-prime.jpg" alt="Проєкт Prime" width="370">
+          <H2 class="portfolio-name">Проєкт Prime</H2>
+          <p class="portfolio-list">Маркетинг</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-boxes.jpg" alt="Проєкт Boxes" width="370">
+          <H2 class="portfolio-name">Проєкт Boxes</H2>
+          <p class="portfolio-list">Додаток</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-inspiration.jpg" alt="Inspiration has no Borders" width="370">
+          <H2 class="portfolio-name">Inspiration has no Borders</H2>
+          <p class="portfolio-list">Веб-сайт</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-edition.jpg" alt="Видання Limited Edition" width="370">
+          <H2 class="portfolio-name">Видання Limited Edition</H2>
+          <p class="portfolio-list">Дизайн</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-lab.jpg" alt="Проєкт LAB" width="370">
+          <H2 class="portfolio-name">Проєкт LAB</H2>
+          <p class="portfolio-list">Маркетинг</p>
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://goit.ua">
+          <img src="./images/portfolio-business.jpg" alt="Growing Business" width="370">
+          <H2 class="portfolio-name">IGrowing Business</H2>
+          <p class="portfolio-list">Додаток</p>
           </a>
         </li>
       </ul>
-
-
-
     </main>
-    <footer>
-      <span class="logo"style="color:var(--blue-color)">Web</span><span class="logo">Studio</span>
-        <address>
+    <footer class="footer">
+      <span class="logo">Web</span><span class="logo" style="color:var(--white-color);">Studio</span>
         <ul>
           <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a class="adress-link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
