--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <span class="logo"style="color:var(--blue-color)">Web</span><span class="logo">Studio</span>
+        <span class="logo">Web</span><span class="logo" style="color:var(--main-text-color);">Studio</span>
         <ul class="site-nav list">
           <li><a href="" class="link current">Студія</a></li>
           <li><a href="./portfolio.html" class="link"">Потрфоліо</a></li>
@@ -53,41 +53,41 @@
       </section>
       <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul>
+        <ul class="list">
             <li><img src="./images/box1.jpg" alt="action1" width="370"></li>
             <li><img src="./images/box2.jpg" alt="action2" width="370"></li>
             <li><img src="./images/box3.jpg" alt="action3" width="370"></li>            
         </ul>
       </section>
       <!--Team-->
-      <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-         <ul> 
+      <section style="background-color:var(--second-backgraund-color);" class="section">
+        <h2 class="section-title" >Наша команда</h2>
+         <ul style="background-color: var(--white-color) ;" class="list"> 
             <li>
               <img src="./images/team1.jpg" alt="team_1" width="270" >
-              <h3>Ігор Дем'яненко</h3>
-              <p>Product Designer</p>
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p class="team-title">Product Designer</p>
             </li>    
             <li>
               <img src="./images/team2.jpg" alt="team_2" width="270">
-              <h3>Ольга Рєпіна</h3>
-              <p>Frontend Developer</p>
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p class="team-title">Frontend Developer</p>
             </li>   
             <li>
               <img src="./images/team3.jpg" alt="team_3" width="270">
-              <h3>Микола Тарасов</h3>
-              <p>Marketing</p>
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p class="team-title">Marketing</p>
             </li>  
             <li>
               <img src="./images/team4.jpg" alt="team_4" width="270">
-              <h3>Михайло Єрмаков</h3>
-              <p>UI Designer</p>
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p class="team-title">UI Designer</p>
             </li>           
           </ul>
       </section>
     </main>
-    <footer>
-      <span class="logo"style="color:var(--blue-color)">Web</span><span class="logo">Studio</span>
+    <footer class="footer">
+      <span class="logo">Web</span><span class="logo" style="color:var(--white-color);">Studio</span>
       <address>
         <ul>
           <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
