--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,12 @@
         </ul>
       </nav>
         <ul class="contact-nav list" >
-          <li><a href="mailto:into@devstudio.com"class="link">into@devstudio.com</a></li>
-          <li><a href="tel:+380961111"class="link">+38 096 111 11 11</a></li>
+          <li><a class="link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="link" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
+      <section>
        <h1 class="visually-hidden"> заголовок портфоліо</h1>
        <ul class="list">
         <li><button class="button-portfolio" type="button">Усі</button></li>
@@ -99,9 +100,11 @@
           </a>
         </li>
       </ul>
+    </section>
     </main>
     <footer class="footer">
       <span class="logo">Web</span><span class="logo" style="color:var(--white-color);">Studio</span>
+      <address>
         <ul>
           <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a class="adress-link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
