--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <span class="logo">Web</span><span class="logo" style="color:var(--main-text-color);">Studio</span>
         <ul class="site-nav list">
           <li><a href="" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link"">Потрфоліо</a></li>
+          <li><a href="./portfolio.html" class="link">Потрфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
         <ul class="contact-nav list" >
-          <li><a href="mailto:into@devstudio.com"class="link">into@devstudio.com</a></li>
-          <li><a href="tel:+380961111"class="link">+38 096 111 11 11</a></li>
+          <li><a class="link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="link" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -62,26 +62,26 @@
       <!--Team-->
       <section style="background-color:var(--second-backgraund-color);" class="section">
         <h2 class="section-title" >Наша команда</h2>
-         <ul style="background-color: var(--white-color) ;" class="list"> 
+         <ul class="list team"> 
             <li>
               <img src="./images/team1.jpg" alt="team_1" width="270" >
-              <h3 class="team-name">Ігор Дем'яненко</h3>
-              <p class="team-title">Product Designer</p>
+              <h3 class="name">Ігор Дем'яненко</h3>
+              <p class="title">Product Designer</p>
             </li>    
             <li>
               <img src="./images/team2.jpg" alt="team_2" width="270">
-              <h3 class="team-name">Ольга Рєпіна</h3>
-              <p class="team-title">Frontend Developer</p>
+              <h3 class="name">Ольга Рєпіна</h3>
+              <p class="title">Frontend Developer</p>
             </li>   
             <li>
               <img src="./images/team3.jpg" alt="team_3" width="270">
-              <h3 class="team-name">Микола Тарасов</h3>
-              <p class="team-title">Marketing</p>
+              <h3 class="name">Микола Тарасов</h3>
+              <p class="title">Marketing</p>
             </li>  
             <li>
               <img src="./images/team4.jpg" alt="team_4" width="270">
-              <h3 class="team-name">Михайло Єрмаков</h3>
-              <p class="team-title">UI Designer</p>
+              <h3 class="name">Михайло Єрмаков</h3>
+              <p class="title">UI Designer</p>
             </li>           
           </ul>
       </section>
