--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <nav>
         <span class="logo">Web</span><span class="logo" style="color:var(--main-text-color);">Studio</span>
         <ul class="site-nav list">
-          <li><a href="" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Потрфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="" class="site-nav-link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="site-nav-link">Потрфоліо</a></li>
+          <li><a href="" class="site-nav-link">Контакти</a></li>
         </ul>
       </nav>
         <ul class="contact-nav list" >
-          <li><a class="link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a class="link" href="tel:+380961111">+38 096 111 11 11</a></li>
+          <li><a class="contact-nav-link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="contact-nav-link" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -32,22 +32,22 @@
       </section>
       <section class="section">
         <h2 class="section-title visually-hidden">Зміст</h2>
-        <ul class="details">          
+        <ul class="details list">          
           <li>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p  class="about">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="details-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p  class="details-about">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="about">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="details-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="details-about">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p class="about">Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="details-title">ПЛАНУВАННЯ</h3>
+            <p class="details-about">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="about">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="details-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="details-about">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
@@ -65,23 +65,23 @@
          <ul class="list team"> 
             <li>
               <img src="./images/team1.jpg" alt="team_1" width="270" >
-              <h3 class="name">Ігор Дем'яненко</h3>
-              <p class="title">Product Designer</p>
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p class="team-title">Product Designer</p>
             </li>    
             <li>
               <img src="./images/team2.jpg" alt="team_2" width="270">
-              <h3 class="name">Ольга Рєпіна</h3>
-              <p class="title">Frontend Developer</p>
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p class="team-title">Frontend Developer</p>
             </li>   
             <li>
               <img src="./images/team3.jpg" alt="team_3" width="270">
-              <h3 class="name">Микола Тарасов</h3>
-              <p class="title">Marketing</p>
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p class="team-title">Marketing</p>
             </li>  
             <li>
               <img src="./images/team4.jpg" alt="team_4" width="270">
-              <h3 class="name">Михайло Єрмаков</h3>
-              <p class="title">UI Designer</p>
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p class="team-title">UI Designer</p>
             </li>           
           </ul>
       </section>
@@ -89,10 +89,10 @@
     <footer class="footer">
       <span class="logo">Web</span><span class="logo" style="color:var(--white-color);">Studio</span>
       <address>
-        <ul>
+        <ul class="list">
           <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a class="adress-link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a class="adress-link" href="tel:+380961111">+38 096 111 11 11</a></li>
+          <li><a class="adress-link color" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="adress-link color" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
