--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,14 @@
       <nav>
         <span class="logo">Web</span><span class="logo" style="color:var(--main-text-color);">Studio</span>
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link current">Потрфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="./index.html" class="site-nav-link">Студія</a></li>
+          <li><a href="./portfolio.html" class="site-nav-link current">Потрфоліо</a></li>
+          <li><a href="" class="site-nav-link">Контакти</a></li>
         </ul>
       </nav>
         <ul class="contact-nav list" >
-          <li><a class="link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a class="link" href="tel:+380961111">+38 096 111 11 11</a></li>
+          <li><a class="contact-nav-link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="contact-nav-link" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -39,63 +39,63 @@
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-techno.jpg" alt="Технокряк" width="370">
-          <H2 class="portfolio-name">Технокряк</H2>
+          <h2 class="portfolio-name">Технокряк</h2>
           <p class="portfolio-list">Веб-сайт</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-          <H2 class="portfolio-name">Постер New Orlean vs Golden Star</H2>
+          <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
           <p class="portfolio-list">Дизайн</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-seafood.jpg" alt="Ресторан Seafood" width="370">
-          <H2 class="portfolio-name">Ресторан Seafood</H2>
+          <h2 class="portfolio-name">Ресторан Seafood</h2>
           <p class="portfolio-list">Додаток</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-prime.jpg" alt="Проєкт Prime" width="370">
-          <H2 class="portfolio-name">Проєкт Prime</H2>
+          <h2 class="portfolio-name">Проєкт Prime</h2>
           <p class="portfolio-list">Маркетинг</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-boxes.jpg" alt="Проєкт Boxes" width="370">
-          <H2 class="portfolio-name">Проєкт Boxes</H2>
+          <h2 class="portfolio-name">Проєкт Boxes</h2>
           <p class="portfolio-list">Додаток</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-inspiration.jpg" alt="Inspiration has no Borders" width="370">
-          <H2 class="portfolio-name">Inspiration has no Borders</H2>
+          <h2 class="portfolio-name">Inspiration has no Borders</h2>
           <p class="portfolio-list">Веб-сайт</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-edition.jpg" alt="Видання Limited Edition" width="370">
-          <H2 class="portfolio-name">Видання Limited Edition</H2>
+          <h2 class="portfolio-name">Видання Limited Edition</h2>
           <p class="portfolio-list">Дизайн</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-lab.jpg" alt="Проєкт LAB" width="370">
-          <H2 class="portfolio-name">Проєкт LAB</H2>
+          <h2 class="portfolio-name">Проєкт LAB</h2>
           <p class="portfolio-list">Маркетинг</p>
           </a>
         </li>
         <li>
           <a class="link" href="https://goit.ua">
           <img src="./images/portfolio-business.jpg" alt="Growing Business" width="370">
-          <H2 class="portfolio-name">IGrowing Business</H2>
+          <h2 class="portfolio-name">IGrowing Business</h2>
           <p class="portfolio-list">Додаток</p>
           </a>
         </li>
@@ -105,10 +105,10 @@
     <footer class="footer">
       <span class="logo">Web</span><span class="logo" style="color:var(--white-color);">Studio</span>
       <address>
-        <ul>
+        <ul class="list">
           <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a class="adress-link" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a class="adress-link" href="tel:+380961111">+38 096 111 11 11</a></li>
+          <li><a class="adress-link color" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="adress-link color" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
