--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="logo">Web</span><span class="logo" style="color:var(--main-text-color);">Studio</span>
         <ul class="site-nav list">
           <li><a href="" class="site-nav-link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="site-nav-link">Потрфоліо</a></li>
+          <li><a href="./portfolio.html" class="site-nav-link">Портфоліо</a></li>
           <li><a href="" class="site-nav-link">Контакти</a></li>
         </ul>
       </nav>
@@ -34,19 +34,19 @@
         <h2 class="section-title visually-hidden">Зміст</h2>
         <ul class="details list">          
           <li>
-            <h3 class="details-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="details-title">увага до деталей</h3>
             <p  class="details-about">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3 class="details-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="details-title">пунктуальність</h3>
             <p class="details-about">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3 class="details-title">ПЛАНУВАННЯ</h3>
+            <h3 class="details-title">планування</h3>
             <p class="details-about">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3 class="details-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="details-title">сучасня технології</h3>
             <p class="details-about">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
@@ -60,7 +60,7 @@
         </ul>
       </section>
       <!--Team-->
-      <section style="background-color:var(--second-backgraund-color);" class="section">
+      <section class="section ourteam">
         <h2 class="section-title" >Наша команда</h2>
          <ul class="list team"> 
             <li>
@@ -91,8 +91,8 @@
       <address>
         <ul class="list">
           <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a class="adress-link color" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a class="adress-link color" href="tel:+380961111">+38 096 111 11 11</a></li>
+          <li><a class="adress-link-color" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="adress-link-color" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
