--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <span class="logo">Web</span><span class="logo" style="color:var(--main-text-color);">Studio</span>
         <ul class="site-nav list">
           <li><a href="./index.html" class="site-nav-link">Студія</a></li>
-          <li><a href="./portfolio.html" class="site-nav-link current">Потрфоліо</a></li>
+          <li><a href="./portfolio.html" class="site-nav-link current">Портфоліо</a></li>
           <li><a href="" class="site-nav-link">Контакти</a></li>
         </ul>
       </nav>
@@ -107,8 +107,8 @@
       <address>
         <ul class="list">
           <li><a class="adress-link" href="https://goo.gl/maps/srSNwpNVW98ARK6E7">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a class="adress-link color" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
-          <li><a class="adress-link color" href="tel:+380961111">+38 096 111 11 11</a></li>
+          <li><a class="adress-link-color" href="mailto:into@devstudio.com">into@devstudio.com</a></li>
+          <li><a class="adress-link-color" href="tel:+380961111">+38 096 111 11 11</a></li>
         </ul>
     </address>
     </footer>
